--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,15 @@ language: go
 before_install:
 - curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
 - dep ensure
+- echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
 
-script: go test -cover
+script: |
+  go test -cover
+  make container
+  docker tag fwwieffering/s3-object-cache fwwieffering/s3-object-cache:$TRAVIS_COMMIT
+  make sidecar
+  docker tag fwwieffering/s3-object-cache-sidecar fwwieffering/s3-object-cache-sidecar:$TRAVIS_COMMIT
+
 
 # branches:
 #   only:
